# PEG

./: .gitignore  CMakeLists.txt  PEG_Delete.cpp  PEG_Load.cpp  PEG_Query.cpp  PEG_Server.cpp  PEG_Service.cpp  README.md  README_EN.md  khop.cpp
api/: PEG_Connector.cpp  PEG_Connector.h
conf/: dblist.json  servers.json
gStoreAPI/: client.cpp  client.h
handler/: Handler.h
joiner/: joiner.cpp
queryDecompose/: Makefile
queryDecompose/Parser/: SparqlLexer.c
queryDecompose/Query/: GeneralEvaluation.cpp  GeneralEvaluation.h  QueryTree.h
script/: build.sh  khop.sh  queryfile  start_server.sh  stop_server.sh
static/zh/static/js/: chunk-42495b4e.b7ac4035.js
util/: RemoteCmdInvoker.h
